--- a/pixrus/seller/templates/activate_pick.html
+++ b/pixrus/seller/templates/activate_pick.html
@@ -96,8 +96,8 @@ function getCSRFToken() {
                                             {% for outcome in market.outcomes %}
                                                 <div class="outcome">
                                                     <p><strong>Outcome:</strong> {{ outcome.name }}</p>
-                                                    <p><strong>Multiplier:</strong> {{ outcome.multiplier }}</p>
-                                                    <button class="btn btn-primary" onclick="confirmActivation('{{ pick.commence_time }}', '{{ pick.home_team }}', '{{ pick.away_team }}', '{{ pick.home_team }} vs {{ pick.away_team }}', '{{ bookmaker.title }}', '{{ outcome.name }}', '{{ outcome.multiplier }}', '{{ pick.sport }}', '{{ pick.league }}', '{{ pick.type }}')">
+                                                    <p><strong>Multiplier:</strong> {{ outcome.price }}</p>
+                                                    <button class="btn btn-primary" onclick="confirmActivation('{{ pick.commence_time }}', '{{ pick.home_team }}', '{{ pick.away_team }}', '{{ pick.home_team }} vs {{ pick.away_team }}', '{{ bookmaker.title }}', '{{ outcome.name }}', '{{ outcome.price }}', '{{ pick.sport }}', '{{ pick.league }}', '{{ pick.type }}')">
                                                         Activate
                                                     </button>
                                                 </div>
