--- a/pixrus/seller/templates/seller_dashboard.html
+++ b/pixrus/seller/templates/seller_dashboard.html
@@ -156,7 +156,7 @@
                     <div class="col-12 col-md-4">
                         <div class="card">
                             <div class="card-header">
-                                <h5 class="card-title">Yearly Stats</h5>
+                                <h5 class="card-title">Weekly Stats</h5>
                             </div>
                             <div class="card-body">
                                 {% for stat in weekly %}
