almost done with PL

--- a/pixrus/seller/templates/profile_view.html
+++ b/pixrus/seller/templates/profile_view.html
@@ -199,10 +199,10 @@
                                                 {{ pick.type_of_pick }}<br>
                                                 <small class="text-muted">{{ pick.pick_data.target_winner }}</small>
                                             </td>
-                                            <td class="{% if pick.pick_data.odds < 0 %}text-success{% else %}text-danger{% endif %} fw-bold">
+                                            <td class="fw-bold">
                                                 {{ pick.pick_data.odds }}
                                             </td>
-                                            <td class="{% if odds < 0 %}text-success{% else %}text-danger{% endif %} fw-bold">
+                                            <td class="fw-bold">
                                                 {{ odds }}
                                             </td>
                                             <td>{{ pick.pick_data.book_maker }}</td>
@@ -248,10 +248,10 @@
                                             {{ pick.type_of_pick }}<br>
                                             <small class="text-muted">{{ pick.pick_data.target_winner }}</small>
                                         </td>
-                                        <td class="{% if pick.pick_data.odds < 0 %}text-success{% else %}text-danger{% endif %} fw-bold">
+                                        <td class="fw-bold">
                                             {{ pick.pick_data.odds }}
                                         </td>
-                                        <td class="{% if odds < 0 %}text-success{% else %}text-danger{% endif %} fw-bold">
+                                        <td class="fw-bold">
                                             {{ odds }}
                                         </td>
                                         <td>{{ pick.pick_data.book_maker }}</td>
